--- a/layouts/page.html
+++ b/layouts/page.html
@@ -29,7 +29,7 @@
   <nav class="pushy pushy-right text-center">
     <ul>
       <li class="pushy-link">
-        <span class="menu-close">&times;</span>
+        <a class="menu-close" href="#">&times;</a>
       </li>
       {{# cosmic.object.header.metafield.nav_links.children }}
         {{# children }}
