--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,6 +16,8 @@
   <link href="/css/pushy.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet">
   <link href="/css/prism.css" rel="stylesheet">
+  <link rel="icon" type="image/png" href="{{ cosmic.object.header.metafield.favicon_32.imgix_url }}" sizes="32x32" />
+  <link rel="icon" type="image/png" href="{{ cosmic.object.header.metafield.favicon_16.imgix_url }}" sizes="16x16" />
 </head>
 <body>
   <header id="header">
