--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>{{ title }} | Cosmic JS Static Site</title>
+  <title>{{ title }} | {{ cosmic.object.header.metafield.site_title.value }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
